--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "tests"
   },
   "dependencies": {
+    "@digitalbazaar/did-method-key": "^2.0.0",
+    "bnid": "^2.1.0",
     "chai": "^4.3.4",
     "mocha": "^9.1.3",
     "mocha-w3c-interop-reporter": "github:digitalbazaar/mocha-w3c-interop-reporter#extend-helpers"
