--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@digitalbazaar/did-method-key": "^2.0.0",
     "bnid": "^2.1.0",
     "chai": "^4.3.4",
+    "jsonld-signatures": "^9.3.1",
     "mocha": "^9.1.3",
     "mocha-w3c-interop-reporter": "github:digitalbazaar/mocha-w3c-interop-reporter#extend-helpers"
   },
