--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
   },
   "dependencies": {
     "@digitalbazaar/did-method-key": "^2.0.0",
+    "@digitalbazaar/ed25519-verification-key-2020": "^3.2.0",
+    "base58-universal": "^1.0.0",
     "bnid": "^2.1.0",
     "chai": "^4.3.4",
+    "ed25519-signature-2018-context": "^1.1.0",
+    "ed25519-signature-2020-context": "^1.1.0",
     "jsonld-signatures": "^9.3.1",
     "mocha": "^9.1.3",
     "mocha-w3c-interop-reporter": "github:digitalbazaar/mocha-w3c-interop-reporter#extend-helpers"
