--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "eslint-config-digitalbazaar": "^2.8.0"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha tests/ --require esm --reporter ./node_modules/mocha-w3c-interop-reporter/index.js --reporter-options body=\"$PWD/body.hbs\",matrix=\"$PWD/matrix.hbs\",reportDir=\"$PWD/reports\",respec=\"$PWD/respecConfig.json\",title=\"Ed25519Signature 2020 Interoperability Report 1.0\",helpers=\"$PWD/templateHelpers.js\",suiteLog='./suite.log' --timeout 15000"
   },
   "repository": {
     "type": "git",
