--- a/respecConfig.json
+++ b/respecConfig.json
@@ -1,9 +1,9 @@
 {
   "specStatus": "unofficial",
-  "shortName": "test-verifiable-credentials-test-suite",
+  "shortName": "di-ed25519-test-suite",
   "subtitle": "Test Interoperability Report for Verifiable Credentials",
-  "github": "https://github.com/digitalbazaar/w3c-test-suite-template",
-  "edDraftURI": "https://digitalbazaar.github.io/w3c-test-suite-template/",
+  "github": "https://github.com/digitalbazaar/di-ed25519-test-suite",
+  "edDraftURI": "https://digitalbazaar.github.io/di-ed25519-test-suite",
   "doJsonLd": true,
   "includePermalinks": false,
   "editors": [
