--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "jsonld-document-loader": "^1.2.0",
     "jsonld-signatures": "^9.3.1",
     "mocha": "^9.1.3",
-    "mocha-w3c-interop-reporter": "github:digitalbazaar/mocha-w3c-interop-reporter#extend-helpers"
+    "mocha-w3c-interop-reporter": "github:digitalbazaar/mocha-w3c-interop-reporter#extend-helpers",
+    "require-dir": "^1.2.0"
   },
   "devDependencies": {
     "eslint": "^8.6.0",
