--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@digitalbazaar/did-method-key": "^2.0.0",
     "@digitalbazaar/ed25519-verification-key-2020": "^3.2.0",
     "@digitalbazaar/http-client": "^2.0.1",
+    "@digitalbazaar/http-signature-zcap-invoke": "^5.0.3",
     "@digitalbazaar/vc": "^2.1.0",
     "@digitalcredentials/did-context": "^1.0.0",
     "base58-universal": "^1.0.0",
