--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   },
   "devDependencies": {
     "eslint": "^8.6.0",
-    "eslint-config-digitalbazaar": "^2.8.0"
+    "eslint-config-digitalbazaar": "^2.8.0",
+    "eslint-plugin-jsdoc": "^37.9.7"
   },
   "scripts": {
     "test": "mocha tests/ --require esm --reporter ./node_modules/mocha-w3c-interop-reporter/index.js --reporter-options body=\"$PWD/body.hbs\",matrix=\"$PWD/matrix.hbs\",reportDir=\"$PWD/reports\",respec=\"$PWD/respecConfig.json\",title=\"Ed25519Signature 2020 Interoperability Report 1.0\",suiteLog='./suite.log' --timeout 15000",
