--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "jsonld-signatures": "^9.3.1",
     "mocha": "^9.1.3",
     "mocha-w3c-interop-reporter": "github:digitalbazaar/mocha-w3c-interop-reporter",
-    "require-dir": "^1.2.0"
+    "require-dir": "^1.2.0",
+    "vc-api-test-suite-implementations": "github:digitalbazaar/vc-api-test-suite-implementations#initial"
   },
   "devDependencies": {
     "eslint": "^8.6.0",
@@ -33,7 +34,7 @@
     "eslint-plugin-jsdoc": "^37.9.7"
   },
   "scripts": {
-    "test": "mocha tests/ --require esm --reporter ./node_modules/mocha-w3c-interop-reporter/index.js --reporter-options body=\"$PWD/body.hbs\",matrix=\"$PWD/matrix.hbs\",reportDir=\"$PWD/reports\",respec=\"$PWD/respecConfig.json\",title=\"Ed25519Signature 2020 Interoperability Report 1.0\",suiteLog='./suite.log' --timeout 15000",
+    "test": "mocha tests/ --require esm --reporter ./node_modules/mocha-w3c-interop-reporter/index.js --reporter-options body=\"$PWD/body.hbs\",reportDir=\"$PWD/reports\",respec=\"$PWD/respecConfig.json\",title=\"Ed25519Signature 2020 Interoperability Report 1.0\",suiteLog='./suite.log' --timeout 15000",
     "generate-requests": "node request-generator/index.js"
   },
   "repository": {
