--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "jsonld-document-loader": "^1.2.0",
     "jsonld-signatures": "^9.3.1",
     "mocha": "^9.1.3",
-    "mocha-w3c-interop-reporter": "github:digitalbazaar/mocha-w3c-interop-reporter#extend-helpers",
+    "mocha-w3c-interop-reporter": "github:digitalbazaar/mocha-w3c-interop-reporter",
     "require-dir": "^1.2.0"
   },
   "devDependencies": {
