--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Install npm dependencies
         run: npm install
+      - name: Generate Credentials
+        run: npm run generate-credentials
       - name: Run test with Node.js ${{ matrix.node-version }}
         run: npm run test
         continue-on-error: true
