--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ed25519-signature-2020-context": "^1.1.0",
     "jsonld-document-loader": "^1.2.0",
     "jsonld-signatures": "^9.3.1",
+    "klona": "^2.0.5",
     "mocha": "^9.1.3",
     "mocha-w3c-interop-reporter": "github:digitalbazaar/mocha-w3c-interop-reporter",
     "require-dir": "^1.2.0",
