--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,8 @@ jobs:
       - name: Generate Credentials
         run: npm run generate-credentials
       - name: Run test with Node.js ${{ matrix.node-version }}
+        env:
+          CLIENT_SECRET_DB: ${{ secrets.CLIENT_SECRET_DB }}
         run: npm run test
         continue-on-error: true
       - name: Deploy to Github Pages
