--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mocha": "^9.1.3",
     "mocha-w3c-interop-reporter": "github:digitalbazaar/mocha-w3c-interop-reporter",
     "require-dir": "^1.2.0",
+    "uuid": "^8.3.2",
     "varint": "^6.0.0",
     "vc-api-test-suite-implementations": "github:digitalbazaar/vc-api-test-suite-implementations#initial"
   },
