--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "jsonld-signatures": "^9.3.1",
     "klona": "^2.0.5",
     "mocha": "^9.1.3",
-    "mocha-w3c-interop-reporter": "github:digitalbazaar/mocha-w3c-interop-reporter",
+    "mocha-w3c-interop-reporter": "github:digitalbazaar/mocha-w3c-interop-reporter#add-more-status-marks",
     "require-dir": "^1.2.0",
     "uuid": "^8.3.2",
     "varint": "^6.0.0",
