--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "require-dir": "^1.2.0",
     "uuid": "^8.3.2",
     "varint": "^6.0.0",
-    "vc-api-test-suite-implementations": "github:digitalbazaar/vc-api-test-suite-implementations#add-filter-map"
+    "vc-api-test-suite-implementations": "github:digitalbazaar/vc-api-test-suite-implementations"
   },
   "devDependencies": {
     "eslint": "^8.6.0",
