--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,12 +2,29 @@ name: Generate Interop Report
 
 on:
   workflow_dispatch:
+  push:
   schedule:
     # update the integration suite once per week at Sunday 5am UTC
-    - cron: '5 0 * * 0'
+    - cron: '0 5 * * 0'
 
 jobs:
+  lint:
+    if: ${{ github.event_name == 'push' }}
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14.x]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: npm install
+      - name: Run eslint
+        run: npm run lint
   test-node:
+    if: ${{ github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' }}
     runs-on: ubuntu-latest
     timeout-minutes: 15
     strategy:
@@ -40,17 +57,3 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Report Github Pages Deployment Status
         run: echo $deployment_status
-  lint:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [14.x]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm install
-      - name: Run eslint
-        run: npm run lint
