--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,14 +13,14 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: [16.x]
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm install
+      - run: npm install --legacy-peer-deps
       - name: Run eslint
         run: npm run lint
   test-node:
@@ -29,7 +29,7 @@ jobs:
     timeout-minutes: 15
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: [16.x]
     steps:
       - uses: actions/checkout@v2
         with:
@@ -39,7 +39,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install npm dependencies
-        run: npm install
+        run: npm install --legacy-peer-deps
       - name: Generate Credentials
         env:
           CLIENT_SECRET_DB: ${{ secrets.CLIENT_SECRET_DB }}
