Use add-oublish-date-respec

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@digitalbazaar/ed25519-verification-key-2020": "^3.2.0",
     "@digitalbazaar/http-client": "^2.0.1",
     "@digitalbazaar/http-signature-zcap-invoke": "^5.0.3",
-    "@digitalbazaar/mocha-w3c-interop-reporter": "^1.0.0",
+    "@digitalbazaar/mocha-w3c-interop-reporter": "github:digitalbazaar/mocha-w3c-interop-reporter#add-publish-date-respec",
     "@digitalbazaar/vc": "^2.1.0",
     "@digitalcredentials/did-context": "^1.0.0",
     "base58-universal": "^1.0.0",
