--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
   "dependencies": {
     "@digitalbazaar/did-method-key": "^2.0.0",
     "@digitalbazaar/ed25519-verification-key-2020": "^3.2.0",
-    "@digitalbazaar/http-client": "^2.0.1",
-    "@digitalbazaar/http-signature-zcap-invoke": "^5.0.3",
     "@digitalbazaar/mocha-w3c-interop-reporter": "github:digitalbazaar/mocha-w3c-interop-reporter#add-new-test-statistics-template",
     "@digitalbazaar/vc": "^2.1.0",
     "@digitalcredentials/did-context": "^1.0.0",
@@ -22,6 +20,7 @@
     "data-integrity-test-suite-assertion": "github:w3c-ccg/data-integrity-test-suite-assertion",
     "ed25519-signature-2018-context": "^1.1.0",
     "ed25519-signature-2020-context": "^1.1.0",
+    "jsonld": "^5.2.0",
     "jsonld-document-loader": "^1.2.0",
     "jsonld-signatures": "^9.3.1",
     "klona": "^2.0.5",
