--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "type": "module",
   "dependencies": {
     "@digitalbazaar/did-method-key": "github:digitalbazaar/did-method-key#convert-to-module",
-    "@digitalbazaar/ed25519-verification-key-2020": "github:digitalbazaar/ed25519-verification-key-2020#convert-to-module",
+    "@digitalbazaar/ed25519-verification-key-2020": "^4.0.0",
     "@digitalbazaar/mocha-w3c-interop-reporter": "^1.2.0",
-    "@digitalbazaar/vc": "github:digitalbazaar/vc-js#export-contexts",
+    "@digitalbazaar/vc": "github:digitalbazaar/vc-js#convert-to-module",
     "@digitalcredentials/did-context": "^1.0.0",
     "base58-universal": "github:digitalbazaar/base58-universal#fix-esm",
     "bnid": "github:digitalbazaar/bnid#convert-to-module",
@@ -21,9 +21,9 @@
     "data-integrity-test-suite-assertion": "github:w3c-ccg/data-integrity-test-suite-assertion",
     "ed25519-signature-2018-context": "^1.1.0",
     "ed25519-signature-2020-context": "^1.1.0",
-    "jsonld": "^5.2.0",
+    "jsonld": "^6.0.0",
     "jsonld-document-loader": "^1.2.0",
-    "jsonld-signatures": "^9.3.1",
+    "jsonld-signatures": "^10.0.0",
     "klona": "^2.0.5",
     "mocha": "^9.1.3",
     "require-dir": "^1.2.0",
