--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   },
   "type": "module",
   "dependencies": {
-    "@digitalbazaar/did-method-key": "github:digitalbazaar/did-method-key#convert-to-module",
+    "@digitalbazaar/did-method-key": "^3.0.0",
     "@digitalbazaar/ed25519-verification-key-2020": "^4.0.0",
     "@digitalbazaar/mocha-w3c-interop-reporter": "^1.2.0",
     "@digitalbazaar/vc": "github:digitalbazaar/vc-js#convert-to-module",
     "@digitalcredentials/did-context": "^1.0.0",
     "base58-universal": "github:digitalbazaar/base58-universal#fix-esm",
-    "bnid": "github:digitalbazaar/bnid#convert-to-module",
+    "bnid": "^3.0.0",
     "canonicalize": "^1.0.8",
     "chai": "^4.3.4",
     "credentials-context": "^2.0.0",
