--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@digitalbazaar/mocha-w3c-interop-reporter": "^1.2.0",
     "@digitalbazaar/vc": "github:digitalbazaar/vc-js#convert-to-module",
     "@digitalcredentials/did-context": "^1.0.0",
-    "base58-universal": "github:digitalbazaar/base58-universal#fix-esm",
+    "base58-universal": "^2.0.0",
     "bnid": "^3.0.0",
     "canonicalize": "^1.0.8",
     "chai": "^4.3.4",
