--- a/package.json
+++ b/package.json
@@ -53,7 +53,11 @@
     "Conformance",
     "Interoperability"
   ],
-  "author": "Digital Bazaar",
+  "author": {
+    "name": "Digital Bazaar, Inc.",
+    "email": "support@digitalbazaar.com",
+    "url": "https://digitalbazaar.com/"
+  },
   "engines": {
     "node": ">=16.0.0"
   },
