--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,7 @@ jobs:
       - name: Run test with Node.js ${{ matrix.node-version }}
         env:
           CLIENT_SECRET_DB: ${{ secrets.CLIENT_SECRET_DB }}
+          KEY_SEED_DB: ${{ secrets.KEY_SEED_DB }}
         run: npm run test
         continue-on-error: true
       - name: Deploy to Github Pages
