--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@digitalbazaar/did-method-key": "^3.0.0",
     "@digitalbazaar/ed25519-verification-key-2020": "^4.0.0",
-    "@digitalbazaar/mocha-w3c-interop-reporter": "^1.3.0",
+    "@digitalbazaar/mocha-w3c-interop-reporter": "digitalbazaar/mocha-w3c-interop-reporter",
     "@digitalbazaar/vc": "^6.0.0",
     "@digitalcredentials/did-context": "^1.0.0",
     "base58-universal": "^2.0.0",
@@ -18,7 +18,7 @@
     "canonicalize": "^1.0.8",
     "chai": "^4.3.6",
     "credentials-context": "^2.0.0",
-    "data-integrity-test-suite-assertion": "github:w3c-ccg/data-integrity-test-suite-assertion#remove-not-implemented",
+    "data-integrity-test-suite-assertion": "github:w3c-ccg/data-integrity-test-suite-assertion",
     "ed25519-signature-2018-context": "^1.1.0",
     "ed25519-signature-2020-context": "^1.1.0",
     "jsonld": "^8.1.0",
