--- a/respecConfig.json
+++ b/respecConfig.json
@@ -2,18 +2,18 @@
   "specStatus": "base",
   "shortName": "di-ed25519signature2020-test-suite",
   "subtitle": "Interoperability Report for Ed25519",
-  "github": "https://github.com/w3c-ccg/di-ed25519signature2020-test-suite",
-  "edDraftURI": "https://w3c-ccg.github.io/di-ed25519signature2020-test-suite",
+  "github": "https://github.com/w3c/vc-di-ed25519signature2020-test-suite",
+  "edDraftURI": "https://w3c.github.io/vc-di-ed25519signature2020-test-suite",
   "doJsonLd": true,
   "includePermalinks": false,
   "editors": [
     { "name": "Andrew Jones", "url": "https://github.com/aljones15",
-      "company": "Digital Bazaar", "companyURL": "http://digitalbazaar.com/" }
+      "company": "Digital Bazaar, Inc.", "companyURL": "https://digitalbazaar.com/" }
   ],
   "authors": [
     { "name": "Andrew Jones", "url": "https://github.com/aljones15",
-      "company": "Digital Bazaar", "companyURL": "http://digitalbazaar.com/" },
-    { "name": "Manu Sporny", "url": "http://manu.sporny.org/",
-      "company": "Digital Bazaar", "companyURL": "http://digitalbazaar.com/" }
+      "company": "Digital Bazaar, Inc.", "companyURL": "https://digitalbazaar.com/" },
+    { "name": "Manu Sporny", "url": "https://manu.sporny.org/",
+      "company": "Digital Bazaar, Inc.", "companyURL": "https://digitalbazaar.com/" }
     ]
 }
